# GPA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_utils/: audio_dataset_ark_audio.py
docs/: index.html
docs/audio/tts/01/: text
docs/audio/tts/02/: text
docs/audio/tts/03/: text
docs/audio/tts/04/: text
docs/audio/tts/05/: text
docs/audio/tts/06/: text
docs/audio/tts/07/: text
docs/audio/tts/08/: text
docs/audio/tts/09/: text
models/bicodec_tokenizer/: base_model.py  spark_detokenizer.py  spark_tokenizer.py  tokenizer_utils.py
models/bicodec_tokenizer/models/: audio_tokenizer.py  bicodec.py
models/bicodec_tokenizer/modules/encoder_decoder/: feat_encoder.py
models/bicodec_tokenizer/modules/speaker/: ecapa_tdnn.py
models/glm_speech_tokenizer/: batch_processor.py  modeling_whisper.py  speech_token_extractor.py  test_speech_token_extractor.py  utils.py
scripts/eval/: eval_jwer_offline.py  evaluate_asr_jiwer.py
scripts/inference/: .gitignore  basic_infer.sh  gpa_inference.ipynb  gpa_inference.py  readme.md
scripts/server/: base_engine.py  docker-compose.yaml  dockerfile  gpa_engine.py  gpa_server.py  gui_app.py  test_client.py  test_gpa_engine.py
scripts/server/llm/: __init__.py  base_llm.py  init_llm.py  llama_cpp_generator.py  mlx_lm_generator.py  sglang_generator.py  torch_generator.py  vllm_generator.py
scripts/server/server_utils/: text_preprocess_utils.py  text_process.py  utils.py
scripts/train/: train_gpa.py  train_gpa.sh
