[project]
name = "gpa-training"
version = "0.1.0"
description = "GPA environment for training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchaudio",
    "transformers>=4.57.0",
    "deepspeed>=0.12.0",
    "peft",
    "accelerate",
    "datasets",
    "bitsandbytes",
    "librosa",
    "numpy",
    "scipy",
    "sentencepiece",
    "protobuf",
    "tiktoken",
    "einops",
    "omegaconf",
    "einx",
    "uvicorn",
    "fastapi",
    "python-multipart",
    "safetensors",
    "vllm>=0.6.0"
    #"flash-attn"
]

[tool.uv]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]